Made the testing code Arduino like
Also, it is avaliable that you can use this to control gimbal in a rough way, to test the mechanism.  You can program it like arduino just changing the code in UserTest.h

--- a/MDK-ARM/demo.uvprojx
+++ b/MDK-ARM/demo.uvprojx
@@ -565,6 +565,11 @@
               <FileType>1</FileType>
               <FilePath>../Src/tim.c</FilePath>
             </File>
+            <File>
+              <FileName>UserTest.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Src\UserTest.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
